[package]
name = "gifts-roulette"
version = "0.1.0"
author = "jonhteper <jonhteper@triamseletea.com>"
edition = "2021"

[profile.release]
lto = true


[dependencies]
lettre = "0.9"
lettre_email = "0.9"
eyre = "0.6.5"
calamine = "0.18.0"
clap = "2.33.3"
dotenv = "0.15.0"
tokio = { version = "1.14.0", features = ["full"] }
delay_timer = "0.10.0"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.72"
serde_derive = "1.0.130"
bcrypt = "0.10.1"

[[bin]]
name = "gifts-roulette"